--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/resources/styles/header_and_footer.css">
-    <link rel="stylesheet" href="/resources/styles/index.css">
-    <link rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./resources/styles/header_and_footer.css">
+    <link rel="stylesheet" href="./resources/styles/index.css">
+    <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="shortcut icon" href="/resources/img/grapes.png" type="image/x-icon" />
     <title>Comité des fêtes de Chateau-Thébaud</title>
     <meta type="description"
@@ -18,7 +18,7 @@
     <header id="start">
         <nav class="navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="/resources/img/logoct.png" alt="ct-logo"
+                <a class="navbar-brand" href="index.html"><img src="./resources/img/logoct.png" alt="ct-logo"
                         class="rounded logoHeader"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
                             <a class="nav-link active fw-bold" aria-current="page" href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item ms-2 me-2">
-                            <a class="nav-link" href="/pages/events.html">Événements</a>
+                            <a class="nav-link" href="./pages/events.html">Événements</a>
                         </li>
                     </ul>
                     <form class="d-flex">
