--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <main class="container mt-3">
         <article class="welcomeText p-2 text-center">
             <div class="text-end">
-                <img src="/resources/img/grapes.png" width="30" alt="grapes" class="grapes">
+                <img src="./resources/img/grapes.png" width="30" alt="grapes" class="grapes">
             </div>
             <h1 class="text-center lead fw-bold mb-0">Bienvenue</h1>
             <p class="text-center p-0 m-0">~</p>
@@ -110,7 +110,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="/resources/img/index/peole.jpg" class="img-fluid d-block w-100"
+                                <img src="./resources/img/index/peole.jpg" class="img-fluid d-block w-100"
                                     alt="welcome-drink">
                                 <div class="carousel-caption d-none d-md-block bg-dark">
                                     <h4 class="text-white fw-bold">Pot d'accueil des nouveaux résidents : 31/03/22
@@ -118,14 +118,14 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="/resources/img/index/pont_caffino.jpg" class="img-fluid d-block w-100"
+                                <img src="./resources/img/index/pont_caffino.jpg" class="img-fluid d-block w-100"
                                     alt="pique-nique">
                                 <div class="carousel-caption d-none d-md-block bg-dark">
                                     <h4 class="text-white fw-bold">Le temps des pique-nique revient !</h4>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="/resources/img/index/rafting.jpg" class="img-fluid d-block w-100"
+                                <img src="./resources/img/index/rafting.jpg" class="img-fluid d-block w-100"
                                     alt="rafting">
                                 <div class="carousel-caption d-none d-md-block bg-dark">
                                     <h4 class="text-white fw-bold">Ouverture des inscriptions pour le rafting</h4>
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div class="text-start m-3">
-                        <img src="/resources/img/grapes.png" width="30" alt="grapes" class="grapes">
+                        <img src="./resources/img/grapes.png" width="30" alt="grapes" class="grapes">
                     </div>
                 </div>
             </section>
@@ -151,7 +151,7 @@
     <footer class="footer text-center mt-3 p-3">
         <div class="container-fluid">
             <div class="logoFooter">
-                <img src="/resources/img/logoct.png" alt="logo-ct">
+                <img src="./resources/img/logoct.png" alt="logo-ct">
             </div>
             <div class="bottomBar mb-3"></div>
             <div class="plan">
@@ -159,7 +159,7 @@
                 <a href="index.html" class="text-decoration-none text-black">
                     <p class="footerAccueil">Accueil</p>
                 </a>
-                <a href="/pages/events.html" class="text-decoration-none text-black">
+                <a href="./pages/events.html" class="text-decoration-none text-black">
                     <p>Événements</p>
                 </a>
             </div>
@@ -174,7 +174,7 @@
                         height="18" alt="flower">, 2022.</p>
             </div>
         </div>
-        <a href="#start"><img src="/resources/img/up.png" alt="up" class="up" /></a>
+        <a href="#start"><img src="./resources/img/up.png" alt="up" class="up" /></a>
     </footer>
     <script src="/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
